<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_open"
        android:title="@string/open"
        android:icon="@drawable/ic_play"
        android:visible="true"
        />

    <item
        android:id="@+id/action_convert_to_mp3"
        android:title="@string/convert_to_mp3"
        android:icon="@drawable/ic_audiotrack"
        android:visible="false"/>

    <item
        android:id="@+id/action_share"
        android:title="@string/share"
        android:icon="@drawable/ic_share"
        android:visible="true"/>

    <item
        android:id="@+id/action_save_to_downloads"
        android:title="@string/save_to_downloads"
        android:icon="@drawable/ic_download"
        android:visible="true"/>

    <item
        android:id="@+id/action_save_to_gallery"
        android:title="@string/save_to_gallery"
        android:icon="@drawable/ic_folder_open"
        android:visible="true"/>

    <item
        android:id="@+id/action_delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete"
        android:visible="true"/>
</menu>
