<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.agcforge.videodownloader.ui.fragment.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/downloadsFragment"
        android:name="com.agcforge.videodownloader.ui.fragment.DownloadsFragment"
        android:label="@string/downloads"
        tools:layout="@layout/fragment_downloads" />

    <fragment
        android:id="@+id/historyFragment"
        android:name="com.agcforge.videodownloader.ui.fragment.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.agcforge.videodownloader.ui.fragment.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

<<<<<<< HEAD
    <fragment
        android:id="@+id/videoConverterFragment"
        android:name="com.agcforge.videodownloader.ui.fragment.VideoConverterFragment"
        android:label="@string/video_converter"
        tools:layout="@layout/fragment_video_converter" />

=======
>>>>>>> d9441acea1800f24d98ca8ff996508019a679444
</navigation>