<?xml version="1.0" encoding="utf-8"?>
<<<<<<< HEAD
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_copy_url"
        android:icon="@drawable/ic_copy"
        android:title="@string/copy"
        tools:ignore="PrivateResource" />
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share" />
    <item
        android:id="@+id/action_report"
        android:icon="@drawable/ic_report"
        android:title="@string/send_report"
        android:visible="true"/>
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete" />
=======
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_copy_url"
        android:title="@string/copy" />
    <item
        android:id="@+id/action_delete"
        android:title="@string/delete" />

    <item
        android:id="@+id/action_share"
        android:title="@string/share" />
>>>>>>> d9441acea1800f24d98ca8ff996508019a679444
</menu>
