<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardCornerRadius="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        >

        <LinearLayout
            android:id="@+id/llIcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@color/bg_menu_primary">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottieAnimation"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:lottie_rawRes="@raw/premium_icon_animation"
                app:lottie_autoPlay="true"
                app:lottie_loop="false"
                app:lottie_speed="1.0"
                app:lottie_repeatCount="3"
                app:layout_constraintBottom_toTopOf="@id/tvAppName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llPremiumInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llIcon"
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/tvAppName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subscription_title"
                android:textColor="@color/text_primary"
                android:textSize="24sp"
                android:textAlignment="center"
                android:fontFamily="@font/tondo_bold"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />

            <TextView
                android:id="@+id/tvPremiumInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/subscription_description"
                android:fontFamily="@font/tondo_light"
                android:textSize="14sp"
                android:textColor="@color/text_primary"
                android:paddingBottom="8dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llPremiumInfo"
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/btnPositive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/subscription_cta_buy"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:visibility="visible"/>

            <Button
                android:id="@+id/btnNegative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/close"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:backgroundTint="@android:color/holo_red_dark"
                android:visibility="visible"/>

        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>